labboxapi_k8s.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: labboxapi-k8s
spec:
  selector:
    matchLabels:
      name: labboxapi-k8s
  replicas: 1
  template:
    metadata:
      labels:
        name: labboxapi-k8s
        app: labbox
    spec:
      serviceAccountName: labboxapi-k8s
      containers:
      - name: labboxapi-k8s
        image: harbor.default.svc.cluster.local/linnil1/labboxapi-k8s
        ports:
        - containerPort: 3476
          protocol: TCP
        volumeMounts:
        - name: volume
          mountPath: /app
          subPath: labboxapi_k8s
      volumes:
      - name: volume
        persistentVolumeClaim:
          claimName: nfs-labserver
---
apiVersion: v1
kind: Service
metadata:
  name: labboxapi-k8s
spec:
  selector:
    name: labboxapi-k8s
  ports:
  - port: 3476
    targetPort: 3476
