labboxmain.yml
---
apiVersion: v1
kind: Service
metadata:
  name: labboxmain
spec:
  selector:
    name: labboxmain
  ports:
  - port: 5000
    targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: labboxmain
spec:
  selector:
    matchLabels:
      name: labboxmain
  replicas: 1
  template:
    metadata:
      labels:
        name: labboxmain
        app: labbox
    spec:
      containers:
      - name: labboxmain
        image: harbor.default.svc.cluster.local/linnil1/labboxmain
        ports:
        - containerPort: 5000
          protocol: TCP
        volumeMounts:
        - name: volume
          mountPath: /app
          subPath: labboxmain
        - name: volume
          mountPath: /app/sshpiper
          subPath: sshpiper
      volumes:
      - name: volume
        persistentVolumeClaim:
          claimName: nfs-labserver
