novnc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: novnc
spec:
  selector:
    name: novnc
  ports:
  - port: 6080
    targetPort: 6080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: novnc
spec:
  selector:
    matchLabels:
      name: novnc
  replicas: 1
  template:
    metadata:
      labels:
        name: novnc
    spec:
      containers:
      - name: novnc
        image: harbor.default.svc.cluster.local/linnil1/novnc
        ports:
        - containerPort: 6080
          protocol: TCP
        volumeMounts:
        - name: volume
          mountPath: /app/novnc
          subPath: novnc
        - name: volume
          mountPath: /app/db.sqlite
          subPath: labboxmain/db.sqlite
      volumes:
      - name: volume
        persistentVolumeClaim:
          claimName: nfs-labserver
