sshpiper.yml
---
apiVersion: v1
kind: Service
metadata:
  name: sshpiper
spec:
  selector:
    name: sshpiper
  type: NodePort
  ports:
  - port: 2222
    targetPort: 2222
    nodePort: 30000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sshpiper
spec:
  selector:
    matchLabels:
      name: sshpiper
  replicas: 1
  template:
    metadata:
      labels:
        name: sshpiper
    spec:
      containers:
      - name: sshpiper
        image: farmer1992/sshpiperd
        ports:
        - containerPort: 2222
          protocol: TCP
        volumeMounts:
        - name: volume
          mountPath: /var/sshpiper
          subPath: sshpiper
        - name: volume
          mountPath: /etc/ssh
          subPath: sshpiper
      volumes:
      - name: volume
        persistentVolumeClaim:
          claimName: nfs-labserver
